--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -8,7 +8,7 @@
 
         <item name="android:windowBackground">@color/white</item>
 
-        <item name="colorPrimary">@color/white</item>
+        <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryDark">@color/white</item>
         <item name="colorPrimaryVariant">@color/grey_white</item>
         <item name="colorOnPrimary">@color/dark_navy_blue</item>
@@ -30,5 +30,9 @@
         <item name="android:textColor">@color/dark_navy_blue</item>
         <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
 
+    </style>
+
+    <style name="AlertDialog" parent="Theme.AppCompat.DayNight.Dialog.Alert">
+        <item name="android:textColor">@color/dark_navy_blue</item>
     </style>
 </resources>
