--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
+        android:background="@color/white"
         app:elevation="0dp">
 
         <com.google.android.material.appbar.MaterialToolbar
@@ -28,9 +28,9 @@
             android:id="@+id/tab_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="?attr/colorPrimary"
+            android:background="@color/white"
             app:tabGravity="center"
-            app:tabIndicatorColor="@color/deep_sky_blue"
+            app:tabIndicatorColor="@color/dark_navy_blue"
             app:tabIndicatorFullWidth="false"
             app:tabMaxWidth="0dp"
             app:tabMode="scrollable"
@@ -53,22 +53,5 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />
-
-    <com.facebook.shimmer.ShimmerFrameLayout
-        android:id="@+id/shimmer_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="100dp"
-        android:alpha="0.4"
-        android:animateLayoutChanges="true"
-        android:animationCache="true"
-        android:clipChildren="true"
-        app:shimmer_dropoff="@integer/material_motion_duration_medium_1"
-        app:shimmer_repeat_mode="restart"
-        app:shimmer_shape="linear">
-
-        <include layout="@layout/item_shimmer" />
-
-    </com.facebook.shimmer.ShimmerFrameLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
