--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -12,16 +12,6 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/hardcore_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="10dp"
-            android:layout_marginTop="15dp"
-            android:text="@string/top_headlines"
-            android:textSize="22sp"
-            android:textStyle="bold" />
-
 <!--        <com.jama.carouselview.CarouselView-->
 <!--            android:id="@+id/home_carousel"-->
 <!--            android:layout_width="match_parent"-->
@@ -40,8 +30,25 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_news"
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
+
+        <com.facebook.shimmer.ShimmerFrameLayout
+            android:id="@+id/shimmer_home"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:alpha="0.6"
+            android:animateLayoutChanges="true"
+            android:animationCache="true"
+            android:clipChildren="true"
+            app:shimmer_dropoff="@integer/material_motion_duration_medium_1"
+            app:shimmer_repeat_mode="restart"
+            app:shimmer_shape="linear">
+
+            <include layout="@layout/item_shimmer" />
+        </com.facebook.shimmer.ShimmerFrameLayout>
+
     </LinearLayout>
 
 </androidx.core.widget.NestedScrollView>
