--- a/app/src/main/res/layout/item_news.xml
+++ b/app/src/main/res/layout/item_news.xml
@@ -2,15 +2,15 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/card_news"
     android:layout_width="match_parent"
     android:layout_height="120dp"
-    android:layout_margin="10dp"
-    android:layout_marginVertical="5dp">
+    android:layout_margin="10dp">
 
     <com.google.android.material.card.MaterialCardView
-        android:id="@+id/card_image"
         android:layout_width="120dp"
         android:layout_height="match_parent"
+        android:id="@+id/card_image"
         android:layout_marginEnd="20dp"
         app:cardCornerRadius="15dp"
         app:cardElevation="0dp">
@@ -26,15 +26,24 @@
     </com.google.android.material.card.MaterialCardView>
 
     <TextView
-        android:id="@+id/news_title"
+        android:id="@+id/news_author"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginVertical="5dp"
         android:layout_toEndOf="@+id/card_image"
-        android:maxLines="4"
+        android:text="@string/new_author"
+        android:fontFamily="@font/roboto_regular"/>
+
+    <TextView
+        android:id="@+id/news_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/news_author"
+        android:layout_toEndOf="@+id/card_image"
+        android:fontFamily="@font/roboto_medium"
+        android:maxLines="3"
         android:text="@string/news_placeholder"
-        android:textSize="16sp"
-        android:textStyle="bold" />
+        android:textSize="16sp" />
 
     <TextView
         android:id="@+id/news_publication_time"
@@ -42,8 +51,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:padding="5dp"
         android:textAlignment="center"
-        android:textSize="14sp"
-        app:drawableStartCompat="@drawable/ic_baseline_access_time" />
+        android:text="@string/april_12_2021"/>
 </RelativeLayout>
