--- a/app/src/main/res/layout/item_shimmer.xml
+++ b/app/src/main/res/layout/item_shimmer.xml
@@ -6,22 +6,6 @@
     android:orientation="vertical">
 
     <com.google.android.material.card.MaterialCardView
-        android:layout_width="100dp"
-        android:layout_height="15dp"
-        android:layout_gravity="start"
-        android:layout_margin="10dp"
-        app:cardBackgroundColor="@color/shimmer_bg_color"
-        app:cardCornerRadius="20dp" />
-
-    <com.google.android.material.card.MaterialCardView
-        android:layout_width="150dp"
-        android:layout_height="15dp"
-        android:layout_gravity="start"
-        android:layout_margin="10dp"
-        app:cardBackgroundColor="@color/shimmer_bg_color"
-        app:cardCornerRadius="20dp" />
-
-    <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_margin="10dp"
@@ -35,7 +19,6 @@
         android:layout_weight="4"
         android:orientation="vertical">
 
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -129,6 +112,52 @@
 
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:orientation="horizontal">
+
+            <com.google.android.material.card.MaterialCardView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="20dp"
+                android:layout_weight="1"
+                android:elevation="2dp"
+                app:cardBackgroundColor="@color/shimmer_bg_color"
+                app:cardCornerRadius="25dp" />
+
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:orientation="vertical">
+
+                <com.google.android.material.card.MaterialCardView
+                    android:layout_width="match_parent"
+                    android:layout_height="15dp"
+                    android:layout_margin="10dp"
+                    app:cardBackgroundColor="@color/shimmer_bg_color"
+                    app:cardCornerRadius="20dp" />
+
+                <com.google.android.material.card.MaterialCardView
+                    android:layout_width="match_parent"
+                    android:layout_height="15dp"
+                    android:layout_margin="10dp"
+                    app:cardBackgroundColor="@color/shimmer_bg_color"
+                    app:cardCornerRadius="20dp" />
+
+                <com.google.android.material.card.MaterialCardView
+                    android:layout_width="100dp"
+                    android:layout_height="15dp"
+                    android:layout_margin="10dp"
+                    app:cardBackgroundColor="@color/shimmer_bg_color"
+                    app:cardCornerRadius="20dp" />
+
+            </LinearLayout>
+
+        </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
